# UnityCodeMCPServer

./: .gitignore  AGENTS.md  README.md  README_STDIO.md  UnityCodeMcpServer.slnx
.agents/skills/executing-csharp-scripts-in-unity-editor/: SKILL.md
.unityCodeMcpServer/: favouriteScripts.json
Assets/: InitTestSceneb502413c-b0f5-4fe5-a23b-a3baee0e041c.unity  UniversalRenderPipelineGlobalSettings.asset
Assets/Plugins/UnityCodeMcpServer/: package.json
Assets/Plugins/UnityCodeMcpServer/Editor/: UnityCodeMcpServerSettings.asset
Assets/Plugins/UnityCodeMcpServer/Editor/STDIO~/: pyproject copy.toml  pyproject.toml
Assets/Plugins/UnityCodeMcpServer/Editor/STDIO~/src/unity_code_mcp_stdio/: __init__.py  unity_code_mcp_bridge_over_file.py  unity_code_mcp_bridge_stdio.py  unity_code_mcp_stdio.py
Assets/Plugins/UnityCodeMcpServer/Editor/STDIO~/tests/: test_bridge.py  test_bridge_over_file.py
Assets/Tests/EditMode/: PackageInstallerTests.cs  RunUnityTestsToolTests.cs  ServerLifecycleCoordinatorTests.cs  UnityCodeMcpHttpServerTests.cs  UnityCodeMcpServerSettingsTests.cs
Assets/Tests/EditMode/FileServer/: FileServerRequestStoreTests.cs  UnityCodeMcpFileServerTests.cs
Assets/Tests/EditMode/StreamableHttp/: HttpRequestHandlerIntegrationTests.cs  (+2 more)
Assets/Tests/Mcp/: TestDomainReload.cs
Dev/: FIleServer.md  FileServerDesign.md
Dev/Python/: mcp_random_tester.py
Dev/Releases/: 0.4_Release_Changes.md  0.5.1_Release_Changes.md  0.5_Release_Changes.md
ProjectSettings/: EditorSettings.asset
docs/superpowers/plans/: 2026-05-04-file-server-transport.md
(+21 files in other folders)
