[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "unity-code-mcp-stdio"
version = "0.4.27-preview"
description = "MCP STDIO Bridge for Unity Code MCP Server - a powerful MCP server for the Unity Editor that gives AI Agents ability to perform any action using Unity Editor API. This includes scripts, scenes, prefabs and assets manipulation, configuration changes, and more."
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Signal Loop" }
]
keywords = ["mcp", "unity", "stdio", "bridge", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
unity-code-mcp-stdio = "unity_code_mcp_stdio:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unity_code_mcp_stdio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/unity_code_mcp_stdio"
]
